force-app/main/default/objects/Negoptim__Brand__c/fields/Negoptim__Brand_Logo__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Brand_Logo__c</fullName>
    <label>Brand Logo ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>