force-app/main/default/objects/Negoptim__Brand__c/fields/Negoptim__Brand_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Brand_Logo_URL__c</fullName>
    <label>Brand Logo</label>
    <type>Url</type>
</CustomField>