force-app/main/default/objects/Negoptim__Brand__c/fields/Negoptim__Brand_Owner__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Brand_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Is the brand owner (pricinpal supplier) of the brand</description>
    <inlineHelpText>Spécifie le propriétaire principal de la marque</inlineHelpText>
    <label>Brand Owner</label>
    <referenceTo>Negoptim__Supplier__c</referenceTo>
    <relationshipLabel>Brands</relationshipLabel>
    <relationshipName>Brands</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>