force-app/main/default/objects/Negoptim__Brand__c/fields/Negoptim__Brand_Parent__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Brand_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Parent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Brand_Parent__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Negoptim__Brand__c.Negoptim__Brand_Parent__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <infoMessage>Choose a master brand without Parent</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Negoptim__Brand__c</referenceTo>
    <relationshipLabel>Child Brands</relationshipLabel>
    <relationshipName>BrandChild</relationshipName>
    <type>Lookup</type>
</CustomField>