force-app/main/default/objects/Negoptim__Brand__c/fields/Negoptim__Brand_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Brand_Type_2__c</fullName>
    <label>Brand Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National Brand</fullName>
                <default>true</default>
                <label>National Brand</label>
            </value>
            <value>
                <fullName>Private Brand</fullName>
            </value>
            <value>
                <fullName>First Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>