force-app/main/default/objects/Negoptim__Brand__c/fields/Negoptim__Logo_Medium__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Logo_Medium__c</fullName>
    <formula>IMAGE(Negoptim__Brand_Logo_URL__c, &quot;Pas d&apos;image&quot;, 90, 90)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Medium</label>
    <type>Text</type>
</CustomField>