force-app/main/default/objects/Negoptim__Brand__c/fields/Negoptim__Type__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Brand_Type</valueSetName>
    </valueSet>
</CustomField>