force-app/main/default/objects/Negoptim__Brand__c/fields/Negoptim__URL__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>