force-app/main/default/objects/Negoptim__Brand__c/fields/SPKERCADELACDisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACDisplayOrder__c</fullName>
    <label>SPKERCADELAC Display Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>