force-app/main/default/objects/Negoptim__Brand__c/recordTypes/Negoptim__Brand_Regular.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Brand_Regular</fullName>
    <active>true</active>
    <label>Brand Regular</label>
</RecordType>