force-app/main/default/objects/Negoptim__Brand__c/listViews/Les_marques.listView-meta.xml
<ListView>
    <fullName>Les_marques</fullName>
    <columns>NAME</columns>
    <columns>SPKERCADELACBrandLogo__c</columns>
    <columns>Negoptim__Brand_code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Negoptim__Brand__c.Negoptim__Brand_Regular</value>
    </filters>
    <label>Les marques</label>
</ListView>