force-app/main/default/objects/Negoptim__Brand__c/listViews/Negoptim__All_Brands.listView-meta.xml
<ListView>
    <fullName>Negoptim__All_Brands</fullName>
    <columns>NAME</columns>
    <columns>Negoptim__Logo_Medium__c</columns>
    <columns>Negoptim__Brand_Type_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Brands</label>
</ListView>